--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "engines": {
     "node": "14.x"
   },
-  "main": "app.js",
+  "main": "initServer.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node initServer.js",
     "test": "node test.js"
   },
   "author": "ProErnestoFernandez",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^2.5.6",
     "express": "^4.16.3",
@@ -22,5 +23,9 @@
     "mongoose": "^5.2.16",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.7.2"
+  },
+  "devDependencies": {
+    "cssnano": "^5.0.12",
+    "postcss": "^8.4.4"
   }
 }
