--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^2.5.6",
     "express": "^4.16.3",
+    "express-validator": "^6.14.0",
     "joi": "^17.3.0",
+    "jwt-simple": "^0.5.6",
     "method-override": "^2.1.2",
     "mongoose": "^5.2.16",
     "node-cron": "^3.0.0",
