--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "ProErnestoFernandez",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset": "^1.1.7",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dateformat": "^5.0.2",
@@ -25,9 +28,13 @@
     "method-override": "^2.1.2",
     "mongoose": "^5.2.16",
     "node-cron": "^3.0.0",
-    "nodemailer": "^6.7.2"
+    "node-fetch": "^3.2.0",
+    "nodemailer": "^6.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.24.1",
     "cssnano": "^5.0.12",
     "postcss": "^8.4.4"
   }
