--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "ProErnestoFernandez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "babel-core": "^6.26.3",
     "babel-preset": "^1.1.7",
     "babel-register": "^6.26.0",
